--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,11 +15,10 @@ h1 {
 
 ul {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1%;
   margin-left: 5%;
   margin-right: 5%;
-  list-style-type: none;
   padding-left: 0;
 }
 
@@ -31,6 +30,10 @@ li {
   text-align: center;
   transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
   cursor: pointer;
+  height: 75px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   &:hover {
     background-color: orange;
     color: white;
@@ -39,17 +42,28 @@ li {
 }
 
 
+
 .crypto-details {
   max-width: 600px;
-  margin: 15% auto;
-  padding: 24px;
-  border: 2px solid white;
+  margin: 5% auto;
+  padding: 32px;
+  border: 2px solid rgba(255, 255, 255, 0.3); // subtieler
   border-radius: 16px;
   background-color: $card-bg;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  color: white;
+  box-shadow: 0 4px 20px black;
+  color: $primary-color;
   text-align: left;
+
+  h2 {
+    margin-bottom: 20px;
+  }
+
+  p {
+    margin: 8px 0;
+    font-size: 16px;
+  }
 }
+
 
 .search-container {
   display: flex;
@@ -62,4 +76,44 @@ li {
   width: 300px;
   border-radius: 8px;
   font-size: 16px;
+}
+
+.chart-container {
+  width: 100%;
+  max-width: 500px;
+  margin: 40px auto 0 auto;
+  text-align: center;
+
+  canvas {
+    max-height: 300px;
+  }
+
+  h3 {
+    margin-bottom: 20px;
+  }
+}
+
+button {
+  background-color: grey;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-left: 10px;
+  font-size: 14px;
+
+  &:hover {
+    background-color: #ff8c00;
+  }
+}
+
+.centered {
+  text-align: center;
+}
+
+.favoriet {
+  background-color: #28a745;
+  font-weight: bold;
+  cursor: default;
 }
