--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -117,3 +117,36 @@ button {
   font-weight: bold;
   cursor: default;
 }
+
+.navbar {
+  background-color: #16113A;
+  padding: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.navbar-list {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-item {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 8px 16px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.navbar-item:hover {
+  background-color: #ff8c00;
+}
+
+.navbar-li {
+  padding: 10px;
+  height: 35px;
+}
